//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Post {
  id Int [pk, increment]
  name String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  createdBy User [not null]
  createdById String [not null]
}

Table Account {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table Session {
  id String [pk]
  sessionToken String [unique, not null]
  userId String [not null]
  expires DateTime [not null]
  user User [not null]
}

Table VerificationToken {
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Table Asset {
  id String [pk]
  name String [not null]
  url String [unique, not null]
  thumbnailUrl String [unique, not null]
  size Float [not null]
  user User [not null]
  userId String [not null]
  event Event
  eventId Int
  eventManager Event
  managerEventId Int [unique]
  jobApplication JobApplication
  jobApplicationId Int [unique]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table User {
  id String [pk]
  name String
  email String [unique, not null]
  emailVerified DateTime
  image String
  bio String
  address String
  lat String
  lng String
  role UserRole [not null, default: 'USER']
  phoneNumber String[] [not null]
  accounts Account [not null]
  sessions Session [not null]
  posts Post [not null]
  chatMessage ChatMessage [not null]
  assets Asset [not null]
  createdEvents Event [not null]
  joinedEvents Event [not null]
  sentInvitations Invitation [not null]
  jobApplications JobApplication [not null]
  seenMessages ChatMessage [not null]
  assignedTasks Task [not null]
  createdTasks Task [not null]
  Ticket Ticket [not null]
  SubDomain SubDomain [not null]
}

Table Event {
  id Int [pk, increment]
  title String [not null]
  type EventType [not null]
  date DateTime [not null]
  address String [not null]
  lat String
  lng String
  capacity Int [not null]
  description String [not null]
  instruction String
  price Float
  managerName String
  managerPhone String
  managerEmail String
  managerImage Asset
  assets Asset [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  createdBy User [not null]
  createdById String [not null]
  participants User [not null]
  jobPositions JobPosition [not null]
  chatGroup ChatGroup
  invitations Invitation [not null]
  tasks Task [not null]
  tags Tag [not null]
  category String [not null]
  SubDomain SubDomain [not null]
  EmailInvitation EmailInvitation [not null]
  Ticket Ticket [not null]
  uniqueVisit Int [default: 0]
  interested Int [default: 0]
}

Table Tag {
  id Int [pk, increment]
  name String [unique, not null]
  events Event [not null]
}

Table JobPosition {
  id Int [pk, increment]
  title String [not null]
  description String
  noOfEmployees Int [not null]
  salary Float
  event Event [not null]
  eventId Int [not null]
  jobApplications JobApplication [not null]
}

Table JobApplication {
  id Int [pk, increment]
  message String [not null]
  status Status [not null, default: 'PENDING']
  user User [not null]
  userId String [not null]
  jobPosition JobPosition [not null]
  jobPositionId Int [not null]
  cv Asset
  pan String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table ChatGroup {
  id Int [pk, increment]
  messages ChatMessage [not null]
  latestMessage ChatMessage
  latestMessageId Int [unique]
  event Event [not null]
  eventId Int [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table ChatMessage {
  id Int [pk, increment]
  message String [not null]
  chatGroup ChatGroup [not null]
  chatGroupId Int [not null]
  latestMessageChatGroup ChatGroup
  user User [not null]
  userId String [not null]
  seenBy User [not null]
  createdAt DateTime [default: `now()`, unique, not null]
  updatedAt DateTime [unique, not null]
}

Table Invitation {
  id Int [pk, increment]
  email String [not null]
  uniqueToken String [unique, not null]
  status Status [not null, default: 'PENDING']
  sender User [not null]
  senderId String [not null]
  event Event [not null]
  eventId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table SubDomain {
  id Int [pk, increment]
  route String [not null]
  templateChosen TemplateChosen [default: 'Template1']
  owner User [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userId String [not null]
  event Event [not null]
  eventId Int [unique, not null]
}

Table Task {
  id Int [pk, increment]
  title String [not null]
  description String
  status TaskStatus [not null, default: 'PENDING']
  dueDate DateTime
  assignedTo User [not null]
  createdBy User [not null]
  createdById String [not null]
  event Event [not null]
  eventId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table EmailInvitation {
  id Int [pk, increment]
  sendTo String [not null]
  createdAt DateTime [default: `now()`, not null]
  event Event [not null]
  eventId Int [not null]
}

Table TicketInfo {
  id Int [pk, increment]
  eventId Int [not null]
  ticketType String [not null]
  price Int [not null]
  color String [not null]
  totalSeats Int [not null]
  reservedSeats Int [not null]
}

Table Ticket {
  id Int [pk, increment]
  length Int
  width Int
  position Int
  color String [not null]
  price String [not null]
  label String [not null]
  isSelectedByUser Boolean
  bookingUser BookingUserInfo
  isBooked Boolean
  user User
  bookedByID String
  event Event [not null]
  eventId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table BookingUserInfo {
  id Int [pk, increment]
  firstName String [not null]
  lastName String [not null]
  email String [not null]
  phone String [not null]
  ticket Ticket [not null]
  ticketId Int [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Enum UserRole {
  ADMIN
  MANAGER
  USER
}

Enum EventType {
  CONFERENCE
  SEMINAR
  WORKSHOP
  PARTY
  CONCERT
  OTHER
}

Enum Status {
  PENDING
  ACCEPTED
  REJECTED
}

Enum TaskStatus {
  PENDING
  IN_PROGRESS
  COMPLETED
}

Enum TemplateChosen {
  Template1
  Template2
}

Ref: Post.createdById > User.id

Ref: Account.userId > User.id [delete: Cascade]

Ref: Session.userId > User.id [delete: Cascade]

Ref: Asset.userId > User.id

Ref: Asset.eventId - Event.id

Ref: Asset.managerEventId - Event.id

Ref: Asset.jobApplicationId - JobApplication.id

Ref: Event.createdById > User.id

Ref: JobPosition.eventId > Event.id

Ref: JobApplication.userId > User.id

Ref: JobApplication.jobPositionId > JobPosition.id

Ref: ChatGroup.latestMessageId - ChatMessage.id

Ref: ChatGroup.eventId - Event.id

Ref: ChatMessage.chatGroupId > ChatGroup.id

Ref: ChatMessage.userId > User.id

Ref: Invitation.senderId > User.id

Ref: Invitation.eventId > Event.id

Ref: SubDomain.userId > User.id

Ref: SubDomain.eventId > Event.id

Ref: Task.createdById > User.id

Ref: Task.eventId > Event.id

Ref: EmailInvitation.eventId > Event.id

Ref: Ticket.bookedByID > User.id

Ref: Ticket.eventId > Event.id

Ref: BookingUserInfo.ticketId - Ticket.id [delete: Cascade]